FIX now playing bar jumping if song title is too long

--- a/src/SharedStyles/_grid.scss
+++ b/src/SharedStyles/_grid.scss
@@ -45,6 +45,7 @@
   width: 100vw;
   height: $now-playing-bar-height;
   background-color: $color-background2;
+  overflow-y: hidden;
 }
 
 .row {
